test/coercions/negative/bad_type_multiple_args.mli.expected

*******************************
********** Parsed file ********
*******************************
type t1
type t2
[@@@gospel {| function c (x: t1) (y: t1) : t2 |}[@@gospel {| coercion |}]]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t1
  

type t2
  

(*@ function c ...
    coercion *)
File "bad_type_multiple_args.mli", line 5, characters 10-11:
Error: Function c cannot be used as a coercion
